# c_cpp_advanced_concepts

./: .gitignore
c/builder_pattern/easy/: CMakeLists.txt  counter.c  counter.h  main.c
c/builder_pattern/hard/: CMakeLists.txt  README.md  main.c
c/builder_pattern/hard/include/: formatter.h  logger.h  writer.h
c/builder_pattern/hard/src/: formatter.c  logger.c  writer.c
c/builder_pattern/medium/: CMakeLists.txt  main.c
c/builder_pattern/medium/include/: shape.h
c/builder_pattern/medium/src/: circle.c  rectangle.c  shape.c  shape_internal.h  triangle.c
c/container_of/: .vscode-ctags  CMakeLists.txt  main.c
c/container_of/include/: container_of.h
c/device_framework/: .vscode-ctags  CMakeLists.txt  README.md
c/device_framework/include/: device.h  network_device.h  storage_device.h
c/device_framework/src/: device.c  main.c  network_device.c  storage_device.c
c/function_pointers/include/: library.h
c/function_pointers/library_demo/: CMakeLists.txt  main.c
c/function_pointers/library_demo/src/: library.c
c/function_pointers/timer_demo/: CMakeLists.txt  main.c
c/function_pointers/timer_demo/include/: timer_demo.h
c/function_pointers/timer_demo/src/: timer_demo.c
c/struct_embedding/: .vscode-ctags  main.c
c/struct_zero_initialization_test/: main  main.c
cpp/multithreading/cppnuts/: v7.cpp
